# Ansible-Reproducibility

./: .pre-commit-config.yaml  README.md  Task Smells.csv  flake.nix  install_and_configure.yml  main.yml_smells.csv  parser.py  parser_to_object.py  pyproject.toml  requirements.txt  run.sh  script_extractor.py  smell_detection.py
Replication Package/: Examples for Smell categories.txt  Grey Literature Source (1).xlsx  Grey Literature Source.xlsx  Smell categories examples
configs/: pytorch_gnmt_to_be_renamed_as_train.py  pytorch_mask_r_cnn_e2e_mask_rcnn_R_50_FPN_1x_1GPU.yaml  pytorch_mask_r_cnn_paths_catalog.py  pytorch_ncf_to_be_renamed_as_ncf.py  pytorch_transformer_to_wt103_base.yml  tensorflow_gnmt_to_be_renamed_as_nmt.py  tensorflow_ncf_to_be_renamed_as_ncf.py  tensorflow_rn50_DGX1_RN50_AMP_90E.sh  tensorflow_rn5_inference_benchmark.sh  tensorflow_ssd_SSD320_FP16_1GPU.sh  tensorflow_ssd_ssd320_full_1gpus.config
mlr/: grey-literature-source.xlsx  smell-examples.txt
replication-package/: Qualitative analysis.xlsx
src/: co_occurance_calculator.py  confusion_matrix.py  correlation.py  detector.py  file count.py  overall_manual_validation.py  parser.py  phi_calculator.py  results.py  run_detector.sh  script_extractor.py  smell_detection.py  smell_frequency.py  smell_report.py
test/: assert.yml_smells_v1.csv  assert.yml_smells_v2.csv  converge.yml_smells_v1.csv  converge.yml_smells_v2.csv  install_and_configure.yml_smells_v1.csv  install_and_configure.yml_smells_v2.csv  main.yml_smells_v1.csv  main.yml_smells_v2.csv  main2.yml_smells_v1.csv  req.yml_smells_v1.csv  (+23 more)
(+9634 files in other folders)
