[project]
name = "reduse"
description = "A reproducibility smells detection tool"
authors = [
    { name = "Ghazal ", email = "gh707451@dal.ca" },
    { name = "Tushar Sharma", email = "000.tushar@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">= 3.11, < 3.13.0a1"
version = "0.0.1"
dependencies = ["pyyaml>=6.0.2", "requests>=2.32", "typer>=0.15"]

[project.scripts]
reduse = "reduse:main.app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["types-requests>=2.32"]

[tool.hatch.build.targets.wheel]
packages = ["reduse/reduse"]
